<resources>
    <string-array name="donutOptions">
        <item>Cake Donut Vanilla</item>
        <item>Cake Donut Chocolate</item>
        <item>Cake Donut Strawberry</item>
        <item>Cake Donut Blueberry</item>
        <item>Cake Donut Banana</item>

        <item>Yeast Donut Vanilla</item>
        <item>Yeast Donut Chocolate</item>
        <item>Yeast Donut Strawberry</item>
        <item>Yeast Donut Blueberry</item>
        <item>Yeast Donut Banana</item>

        <item>Donut Hole Vanilla</item>
        <item>Donut Hole Chocolate</item>
        <item>Donut Hole Strawberry</item>
        <item>Donut Hole Blueberry</item>
        <item>Donut Hole Banana</item>
    </string-array>
    <string-array name="donut_prices">
        <item>$1.89</item>
        <item>$1.89</item>
        <item>$1.89</item>
        <item>$1.89</item>
        <item>$1.89</item>
        <item>$1.79</item>
        <item>$1.79</item>
        <item>$1.79</item>
        <item>$1.79</item>
        <item>$1.79</item>
        <item>$0.39</item>
        <item>$0.39</item>
        <item>$0.39</item>
        <item>$0.39</item>
        <item>$0.39</item>
    </string-array>
    <string name="app_name">My Cafe</string>
    <string name="coffee">Coffee</string>
    <string name="donuts">Donuts</string>
    <string name="current_order">Current Order</string>
    <string name="all_orders">All Orders</string>
    <string name="current_all_orders">Current/All Orders</string>
    <string name="sandwich">Sandwich</string>
    <string name="ru_cafe">RU Cafe!</string>
    <string name="sweet_cream">Sweet Cream</string>
    <string name="add_ins_0_30_each">Add Ins ($0.30 Each):</string>
    <string name="french_vanilla">French Vanilla</string>
    <string name="irish_cream">Irish Cream</string>
    <string name="caramel">Caramel</string>
    <string name="mocha">Mocha</string>
    <string name="add_coffee">Add Coffee</string>
    <string name="remove_from_order">Remove From Order</string>
    <string name="remove_coffee">Remove Coffee</string>
    <string name="only_5_of_the_same_coffee_allowed">Only 5 of the same coffee allowed</string>
    <string name="donut_type_not_selected">Donut type not selected!</string>
    <string name="_0_00">0.00</string>
    <string name="no_more_than_five_coffees_of_the_same_type">No more than five coffees of the same type :(</string>
    <string name="i_understand">I understand.</string>
    <string name="none">none</string>
    <string name="coffee_type_not_selected">Coffee type not selected!</string>
    <string name="refresh_current">Refresh Current</string>
    <string name="refresh_orders">Refresh Orders</string>
    <string name="home">Home</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="cost">Cost:</string>
    <string name="name">Name</string>
    <string name="place_order">Place Order</string>
    <string name="remove_item">Remove Item</string>
    <string name="total_cost">Total Cost</string>
    <string name="quantity">Quantity:</string>
    <string name="dash">-</string>
    <string name="plus">+</string>
    <string name="total">Total:</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="textview">TextView</string>
    <string name="bread">Bread:</string>
    <string name="bagel">Bagel</string>
    <string name="wheat_bread">Wheat Bread</string>
    <string name="sour_dough">Sour Dough</string>
    <string name="meat">Meat:</string>
    <string name="beef">Beef</string>
    <string name="chicken">Chicken</string>
    <string name="fish">Fish</string>
    <string name="cheese">Cheese</string>
    <string name="onions">Onions</string>
    <string name="lettuce">Lettuce</string>
    <string name="tomatoes">Tomatoes</string>
    <string name="add_ons">Add Ons:</string>
    <string name="add_sandwich">Add Sandwich</string>


</resources>