<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="407dp"
        android:layout_height="676dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp">

        <Button
            android:id="@+id/btn_currentAllOrders"
            android:layout_width="226dp"
            android:layout_height="wrap_content"
            android:text="@string/current_all_orders"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/btn_donut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donuts"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/btn_sandwich"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sandwich"
            app:layout_column="2"
            app:layout_row="1" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="232dp"
            android:layout_height="100dp"
            android:layout_marginTop="100px"
            android:rotation="8"
            android:text="@string/ru_cafe"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/btn_coffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="175px"
            android:text="@string/coffee"
            app:layout_column="1"
            app:layout_row="1" />


    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>