<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="380dp"
        android:layout_height="627dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ListView
            android:id="@+id/listViewOrders"
            android:layout_width="wrap_content"
            android:layout_height="102dp"
            app:layout_column="0"
            app:layout_row="3"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="66dp" />

        <ListView
            android:id="@+id/listViewChosenOrder"
            android:layout_width="wrap_content"
            android:layout_height="118dp"
            app:layout_column="0"
            app:layout_row="6" />

        <Button
            android:id="@+id/btnHome"
            android:layout_width="369dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/home"
            app:layout_column="0"
            app:layout_row="7" />

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_column="0"
            app:layout_row="5">

            <Button
                android:id="@+id/btnRefreshOrders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/refresh_current" />

            <Button
                android:id="@+id/btnRemoveOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/cancel_order"
                app:layout_column="2"
                app:layout_row="0" />
        </androidx.gridlayout.widget.GridLayout>

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_column="0"
            app:layout_row="4">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:text="@string/cost"
                app:layout_column="0"
                app:layout_row="0" />

            <EditText
                android:id="@+id/txtTotalChosenOrderCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="@string/name"
                app:layout_column="1"
                app:layout_row="0" />

        </androidx.gridlayout.widget.GridLayout>

        <ListView
            android:id="@+id/listViewCurrentOrder"
            android:layout_width="match_parent"
            android:layout_height="141dp"
            app:layout_column="0"
            app:layout_row="0" />

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_column="0"
            app:layout_row="2">

            <Button
                android:id="@+id/btnPlaceOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="25dp"
                android:text="@string/place_order" />

            <Button
                android:id="@+id/btnRefreshCurrent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/refresh_orders" />

            <Button
                android:id="@+id/btnRemoveMenuItem"
                android:layout_width="98dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/remove_item"
                app:layout_column="2"
                app:layout_row="0" />
        </androidx.gridlayout.widget.GridLayout>

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_column="0"
            app:layout_row="1">

            <TextView
                android:id="@+id/notImportant"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="80dp"
                android:text="@string/cost"
                app:layout_column="0"
                app:layout_row="0" />

            <EditText
                android:id="@+id/txtTotalCurrentOrderCost"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="text"
                android:text="@string/name"
                app:layout_column="2"
                app:layout_row="0" />
        </androidx.gridlayout.widget.GridLayout>

    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>