<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.gridlayout.widget.GridLayout
                android:layout_width="407dp"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="1dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="67dp"
                    android:layout_height="65dp"
                    android:layout_margin="50px"
                    app:srcCompat="@drawable/vanilla_cake_donut"
                    tools:srcCompat="@drawable/banana_cake_donut"/>

                <Button
                    android:id="@+id/btnDecDonut"
                    android:layout_width="37dp"
                    android:layout_height="wrap_content"
                    android:text="@string/minus"
                />
                <EditText
                    android:id="@+id/txtCount"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:text="@string/_0"
                />
                <Button
                    android:id="@+id/btnIncDonut"
                    android:layout_width="43dp"
                    android:layout_height="wrap_content"
                    android:text="@string/plus"
                    app:layout_column="4" app:layout_row="0"/>
                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="182dp"
                    android:layout_height="wrap_content"
                    android:text="@string/textview"
                />
                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="182dp"
                    android:layout_height="wrap_content"
                    android:text="@string/textview"
                />
            </androidx.gridlayout.widget.GridLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>