<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="400dp"
        android:layout_height="661dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="5dp">

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            app:layout_column="0"
            app:layout_row="1">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="10dp"
                android:text="@string/total"
                app:layout_column="0"
                app:layout_row="0" />

            <EditText
                android:id="@+id/txtSubTotalDonut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="@string/name"
                app:layout_column="1"
                app:layout_row="0" />

        </androidx.gridlayout.widget.GridLayout>



        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="424dp"
            app:layout_column="0"
            app:layout_row="0">



            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/myRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_column="0"
                app:layout_row="0" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_column="1"
                app:layout_row="0" />
        </androidx.gridlayout.widget.GridLayout>

        <Button
            android:id="@+id/btnHome"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/home"
            app:layout_column="0"
            app:layout_row="2" />

    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>